# labellerr-alo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
alo/: __init__.py
alo/active_learning/: __init__.py
alo/agents/: __init__.py  base_agent.py  discovery_agent.py  sampler_agent.py  validator_agent.py
alo/connectors/: __init__.py  labellerr_connector.py
alo/orchestrator/: __init__.py  workflow.py
alo/validators/: __init__.py
docs/: README.md  RELEASE_TO_PYPI.md  SDK_VS_ALO.md
examples/: README.md  active_learning_loop.yaml  image_classification_workflow.yaml  intelligent_discovery_workflow.yaml  object_detection_workflow.yaml
